--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     }
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "jade": "~1.11.0",
-    "mongoose": "^5.1.6",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "body-parser": "1.18.3",
+    "cookie-parser": "1.4.3",
+    "debug": "2.6.9",
+    "express": "4.15.5",
+    "jade": "1.11.0",
+    "mongoose": "5.1.6",
+    "morgan": "1.9.0",
+    "serve-favicon": "2.4.5"
   },
   "devDependencies": {
-    "cz-customizable": "^5.3.0"
+    "cz-customizable": "5.3.0"
   }
 }
