--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "debug": "2.6.9",
     "express": "4.16.4",
     "mongoose": "5.1.6",
-    "morgan": "1.9.1"
+    "morgan": "1.9.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "cz-customizable": "5.3.0"
