--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "docs": "npm run docs:html && npm run docs:markdown",
+    "docs:html": "./node_modules/.bin/apidoc -i routes -o docs",
+    "docs:markdown": "./node_modules/.bin/apidoc-markdown -p docs -o README.md"
   },
   "config": {
     "commitizen": {
@@ -19,6 +22,7 @@
     "morgan": "1.9.1"
   },
   "devDependencies": {
+    "apidoc-markdown": "^0.2.1",
     "cz-customizable": "5.3.0"
   }
 }
